--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ $RECYCLE.BIN/
 cc_data/default of credit card clients exploratory.xls
 dataminingset.pdf
 Project_1_Details.pdf
+ParkerLegbandShuhart.pdf
